--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "2.5.8",
-    "jade": ">= 0.0.1",
+    "express": "~3.0.0rc5",
+    "jade": "~0.27.6",
     "request": "~2.9.202",
     "xmlbuilder": "~0.3.1",
     "sugar": "~1.2.5",
