--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "connect-redis": "~1.4.0",
     "mongoose": "~3.3.1",
     "connect-mongo": "~0.2.0",
-    "underscore": "~1.4.2"
+    "underscore": "~1.4.2",
+    "moment": "~1.7.2",
+    "ironmq": "~0.1.4"
   }
 }
